ibuilder/tests/not_compile/non_struct.stderr
error: only structs can derive ibuilder
 --> $DIR/non_struct.rs:4:1
  |
4 | / enum Foo {
5 | |     Var,
6 | | }
  | |_^

error[E0599]: no variant or associated item named `builder` found for enum `Foo` in the current scope
 --> $DIR/non_struct.rs:9:10
  |
4 | enum Foo {
  | -------- variant or associated item `builder` not found here
...
9 |     Foo::builder();
  |          ^^^^^^^ variant or associated item not found in `Foo`
