ibuilder/tests/not_compile/non_struct.rs
use ibuilder::ibuilder;

#[derive(ibuilder)]
enum Foo {
    Var,
}

fn main() {
    Foo::builder();
}
